--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(#b5eaff, #b5eaff,#4db0e9, #4db0e9, #2d68c2, #2d68c2, #2b3a92, #2b3a92);
+    background-image: linear-gradient(#f0bc4c, #b5eaff,#4db0e9, #4db0e9, #2d68c2, #2d68c2, #2b3a92, #2b3a92);
 }
 
 .longscroll{
